# ImageConverter-tg-bot

./: .dockerignore  .env.example  AGENTS.md  Dockerfile  IMPROVEMENTS.md  Makefile  PLAN.md  README.md  bot.py  config.py  converter.py  docker-compose.yml  handlers.py  image_converter.py  pyproject.toml
scripts/: generate_test_data.py
src/: Dockerfile  pyproject.toml
src/bot/: album_middleware.py  bot.py  config.py  handlers.py
src/core/: config.py  converter.py  image_converter.py  settings.py
tests/: test_conversions.py  test_e2e_scenarios.py
